# neoterm

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: neoterm.cpp
app/src/main/cpp/ukfs/: ukfs.cmake
app/src/main/cpp/ukfs/include/: pthread.h  uk_fs_api.h
app/src/main/cpp/ukfs/include/asm/: atomic.h  byteorder.h  div64.h  io.h  page.h  uaccess.h  unaligned.h
app/src/main/cpp/ukfs/include/crypto/: sha2.h
app/src/main/cpp/ukfs/include/kunit/: static_stub.h  test.h
app/src/main/cpp/ukfs/include/linux/: acpi.h  atomic.h  backing-dev-defs.h  backing-dev.h  bio.h  bit_spinlock.h  bitmap.h  bitops.h  bitrev.h  bits.h  blk-crypto.h  blk_types.h  blkdev.h  blockgroup_lock.h  buffer_head.h  bug.h  build_bug.h  capability.h  cdrom.h  circ_buf.h  cleanup.h  compat.h  compiler.h  completion.h  container_of.h  cpumask.h  crc16.h  crc32.h  crc32c.h  cred.h  ctype.h  dax.h  delay.h  device.h  dma-mapping.h  errno.h  etherdevice.h  ethtool.h  export.h  exportfs.h  (+177 more)
app/src/main/cpp/ukfs/shim/: compat_bionic.c
app/src/main/cpp/ukfs/test/: README.md  fs_redirect_test.c  loopmnt.c  ondevice_smoke.sh  run_host_tests.sh  run_proot_it.sh  ukfsd_e2e.py  ukfsd_parts.py
app/src/main/java/io/neoterm/: App.kt
app/src/main/res/layout/: ui_about.xml  ui_crash.xml  ui_main.xml  ui_term.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: preference_keys.xml  strings.xml
app/src/main/res/xml/: setting_general.xml
docs/: FUSE_DESIGN.md  (+1 more)
(+147 files in other folders)
